Version 5.0

Bug Fixes: <none>

Improvements: 

Added "Refresh Bucket" button. Functions just like the search button. Added it for ease of use.
Search button and text field are now located under the bucket list.
Minor GUI alignment fixes.
More compact GUI; ideal for smaller screens.
Versioning - Improved delete.
When deleting a version of a file, the bucket is refreshed to show the changes.
Console window is disabled by default and can be turned on or off.
Console window will automatically appear upon important events.
Text "Buckets" in Object Explorer has been replaced with a icon.
Sync buttons are no longer Toggle Buttons.
Better debug messages for PUT, DELETE, and GET.

New Features: 

Improved GUI.
Support for accessing a shared bucket.
Support for sharing bucket access with a canonical ID.
"File -> New Window" - Run another instance of Cloud Explorer!
S3 Accounts can now have a unique name rather than using the endpoint.

Features:

1. Tier buckets to and from Amazon Glacier.
2. Sync files to and from S3 storage.
3. Stream music.
4. Text editor.
5. Modify Bucket and Object ACL's.
6. Take screen shots and upload them to your bucket.
7. Bucket versioning and life cycles.
8. Graphical and console based background syncing.
9. Store multiple Amazon S3 accounts.
10. Image viewer.
11. Migrate buckets between S3 accounts.
12. Bucket search.
13. Performance testing with graphs.
14. Command-line interface.
15. IRC client that allows you to save chat sessions to S3.
16. Access shared buckets on the same S3 provider.
17. Share buckets with the Canonical ID of a user on the same S3 provider.

Command-line Options:

java -jar CloudExplorer.jar put filename bucket
java -jar CloudExplorer.jar get filename bucket destination
java -jar CloudExplorer.jar delete filename bucket 

#List bucket contents
java -jar CloudExplorer.jar ls bucket

#List buckets
java -jar CloudExplorer.jar listbuckets

#Delete a bucket
java -jar CloudExplorer.jar rmbucket bucket

#Create a bucket